# Labor-Sieve

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  SECURITY_REVIEW.md  config.example.yaml  pyproject.toml
labor_sieve/: __init__.py  cli.py  company_catalog.py  company_catalog.yaml  completions.py  config.py  dedupe.py  exclusions.py  history.py  models.py  net.py  presets.py  reports.py  schema.py  scoring.py  taxonomy.py  update_check.py
labor_sieve/sources/: arbeitnow.py  ashby.py  base.py  greenhouse.py  lever.py  local_file.py  normalization.py  remoteok.py  sample.py  workday.py
presets/: datacenter-hardware.yaml  implementation-support.yaml  index.json  linux-sre.yaml  logistics-process.yaml  operations-engineer.yaml  senior-infra-lead.yaml
scripts/: build-preset-index.py  build-release.sh  install.sh  set-version.py
tests/: conftest.py  test_cli.py  test_company_catalog.py  test_config.py  test_dedupe.py  test_exclusions.py  test_history.py  test_presets.py  test_reports.py  test_scoring.py  test_sources.py  test_update_check.py
