[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "labor-sieve"
dynamic = ["version"]
description = "Linux-first command-line job search and reporting for operations-adjacent roles."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]
authors = [
  { name = "LaborSieve maintainers" },
]
license = "MIT"
keywords = ["jobs", "cli", "sre", "operations", "linux"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Utilities",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "setuptools>=68",
  "twine>=6.0",
]

[project.scripts]
labor-sieve = "labor_sieve.cli:main"

[tool.setuptools.packages.find]
include = ["labor_sieve*"]

[tool.setuptools.dynamic]
version = { attr = "labor_sieve.__version__" }

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc", "*.pyo"]

[tool.setuptools.package-data]
labor_sieve = ["company_catalog.yaml"]

[tool.setuptools.data-files]
"share/labor-sieve" = [
  "config.example.yaml",
  "labor_sieve/company_catalog.yaml",
  "SECURITY.md",
  "SECURITY_REVIEW.md",
]
"share/labor-sieve/presets" = [
  "presets/operations-engineer.yaml",
  "presets/linux-sre.yaml",
  "presets/datacenter-hardware.yaml",
  "presets/logistics-process.yaml",
  "presets/implementation-support.yaml",
  "presets/senior-infra-lead.yaml",
]
"share/labor-sieve/scripts" = [
  "scripts/install.sh",
  "scripts/build-release.sh",
  "scripts/build-preset-index.py",
  "scripts/set-version.py",
]
